subiendo ramdom de unplash

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,8 @@
   height: 100vh;
 }
 .image-background{
-  background-image: url('../assets/images/beach1.jpg');
+  background-image: url("https://source.unsplash.com/random");
   color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
