añaniendo mi collection unplash

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@
   height: 100vh;
 }
 .image-background{
-  background-image: url("https://source.unsplash.com/random");
+  background-image: url("https://source.unsplash.com/collection//1744241/my-first-collection/");
   color: white;
   background-size: cover;
   background-repeat: no-repeat;
