añade vista de predicciones semana

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,8 @@
 .height-100 {
   height: 100vh;
 }
-.image-background{
+
+/* .image-background{
   background-image: url('../assets/images/beach1.jpg');
   color: white;
-}
+} */
