--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,3 +8,9 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+#view-2, #view-3{
+  width: 60%;
+  border-radius:3px;
+  border:1px solid white;
+  background-color:rgba(0, 0, 0, 0.377); 
+}
