--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,9 +8,13 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 #view-2, #view-3{
-  width: 60%;
   border-radius:3px;
   border:1px solid white;
   background-color:rgba(0, 0, 0, 0.418); 
+}
+
+.height-80 {
+  height: 80vh;
 }
